libanjuta: keep a ref on the AnjutaAsyncCommand when its thread is run

https://bugzilla.gnome.org/show_bug.cgi?id=694194